[package]
name = "monosodium"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14", features = ["full"] }
serde_json = "1.0"
tokio-stream = "0.1.8"
